# poweroid-devices

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  devnotes.txt  poweroid_fan_2x1_1x1.ino  poweroid_fan_2x1_1x1_prop.h  set_flags.bat  upload.bat  upload_prog.bat  upload_prog_1284.bat
Poweroid_SDK_10/: CMakeLists.txt
Poweroid_SDK_10/ACROBOTIC_SSD1306/: ACROBOTIC_SSD1306.cpp  ACROBOTIC_SSD1306.h
Poweroid_SDK_10/ACROBOTIC_SSD1306/fonts/: FreeSans18pt7b.h
Poweroid_SDK_10/DHT/: DHT.cpp
Poweroid_SDK_10/DS1307/: DS1307.cpp
Poweroid_SDK_10/I2C/: I2C.cpp
Poweroid_SDK_10/Poweroid10/: Poweroid10.cpp  Poweroid10.h  bluetooth.cpp  bluetooth.h  commander.cpp  commander.h  commands.cpp  commands.h  commons.cpp  commons.h  context.h  controller.cpp  controller.h  global.h  indicators.cpp  indicators.h  persistence.cpp  persistence.h  relays.cpp  relays.h  sensors.cpp  sensors.h  timings.cpp  timings.h  ultrasonic.cpp  ultrasonic.h
Poweroid_SDK_10/cmake/Platform/: Arduino.cmake
Poweroid_SDK_10/lib/ACROBOTIC_SSD1306/: ACROBOTIC_SSD1306.cpp  ACROBOTIC_SSD1306.h
Poweroid_SDK_10/lib/ACROBOTIC_SSD1306/fonts/: font5x7.h  font8x8.h
Poweroid_SDK_10/lib/DS1307/: DS1307.cpp  DS1307.h
Poweroid_SDK_10/lib/Rotary/: Rotary.h
Poweroid_SDK_10/src/: Poweroid10.cpp  Poweroid10.h  bluetooth.cpp  bluetooth.h  boards.h  commander.cpp  commander.h  commands.cpp  commands.h  commons.cpp  commons.h  context.h  controller.cpp  controller.h  datetime.cpp  datetime.h  global.h  indicators.cpp  indicators.h  persistence.cpp  persistence.h  properties.cpp  properties.h  relays.cpp  relays.h  sensors.cpp  sensors.h  timings.cpp  timings.h  ultrasonic.cpp  ultrasonic.h
cmake/Platform/: Arduino.cmake
deploy-scripts/: devnotes.txt  env.cmd  read_info.bat  set_flags.bat  set_fuses.bat  upload.bat  upload_prog.bat
deploy-scripts/flags/: f_000001.hex  f_000110.hex  f_000111.hex
deploy-scripts/win/: create_hash.ps1
devices/blink/: poweroid_blink.ino
devices/fan_3x1_dht/: poweroid_fan_3x1_dht.ino  poweroid_fan_3x1_dht_prop.h  poweroid_fan_3x1_dht_state.h
devices/level_controller_1x1_us_t/: poweroid_level_controller_1x1_us_t.ino  poweroid_level_controller_1x1_us_t_prop.h  poweroid_level_controller_1x1_us_t_state.h
devices/meteo_2_dht/: poweroid_meteo_2_dht.ino  poweroid_meteo_2_dht_prop.h  poweroid_meteo_2_dht_state.h
devices/pump_station_3x2/: poweroid_pump_station_3x2.ino  poweroid_pump_station_3x2_prop.h  poweroid_pump_station_3x2_state.h
devices/quickstart/: poweroid_quickstart.ino  poweroid_quickstart_prop.h  poweroid_quickstart_state.h
devices/repeater_0x0_ss/: poweroid_repeater_0x0_ss.ino  poweroid_repeater_0x0_ss_prop.h  poweroid_repeater_0x0_ss_state.h
devices/tensiometer_1x1/: poweroid_tensiometer_1x1.ino  poweroid_tensiometer_1x1_prop.h  poweroid_tensiometer_1x1_state.h
devices/test/: poweroid_test.ino  poweroid_test_prop.h
devices/test_bt/: poweroid_test_bt.ino
devices/thermo_1-2x2_dht/: poweroid_thermo_1-2x2_dht.ino  poweroid_thermo_1-2x2_dht_prop.h  poweroid_thermo_1-2x2_dht_state.h
devices/timer_button_1x1/: poweroid_timer_button_1x1.ino  poweroid_timer_button_1x1_prop.h  poweroid_timer_button_1x1_state.h
fan_2x1_1x1/: poweroid_fan_2x1_1x1.ino  poweroid_fan_2x1_1x1_prop.h
fan_3x1/: poweroid_fan_3x1.ino  poweroid_fan_3x1_state.h
fan_3x1_dht/: poweroid_fan_3x1_dht.ino  poweroid_fan_3x1_dht_prop.h  poweroid_fan_3x1_dht_state.h
flags/: f_000000.hex
lib/ACROBOTIC_SSD1306/: ACROBOTIC_SSD1306.cpp  ACROBOTIC_SSD1306.h
lib/ACROBOTIC_SSD1306/fonts/: FreeSans12pt7b.h  font8x8.h
lib/I2C/: I2C.h
lib/MultiClick/: MultiClick.cpp  MultiClick.h
lib/PoweroidSdk10/: PoweroidSdk10.cpp  PoweroidSdk10.h  Relays.cpp  Relays.h  bluetooth.cpp  bluetooth.h  commander.cpp  commands.cpp  commands.h  common_commands.cpp  common_commands.h  commons.cpp  commons.h  context.h  controller.cpp  controller.h  global.h  persistence.cpp  persistence.h  pin_io.cpp  pin_io.h  properties.cpp  properties.h  relays.cpp  relays.h  sensors.cpp  sensors.h  timings.cpp  timings.h
projects/fan_3x1_dht/: poweroid_fan_3x1_dht.ino  poweroid_fan_3x1_dht_state.h
projects/pump_station_3x2/: poweroid_pump_station_3x2.ino  poweroid_pump_station_3x2_prop.h  poweroid_pump_station_3x2_state.h
projects/tensiometer_1x1/: poweroid_tensiometer_1x1.ino  poweroid_tensiometer_1x1_prop.h  poweroid_tensiometer_1x1_state.h
projects/thermo_1-2x2_dht/: poweroid_thermo_1-2x2_dht.ino  poweroid_thermo_1-2x2_dht_prop.h  poweroid_thermo_1-2x2_dht_state.h
projects/timer_button_1x1/: poweroid_timer_button_1x1.ino  poweroid_timer_button_1x1_prop.h  poweroid_timer_button_1x1_state.h
pump_station_3x2/: poweroid_pump_station_3x2.ino  poweroid_pump_station_3x2_prop.h  poweroid_pump_station_3x2_state.h  pump_station_3x2.ino  pump_station_3x2_prop.h  pump_station_3x2_state.h
tensiometer_1x1/: poweroid_tensiometer_1x1.ino  poweroid_tensiometer_1x1_state.h
test/: bt_test.ino  pwr_mock_serial.py
test_bt/: poweroid_test_bt.ino
timer_button_1x1/: poweroid_timer_button_1x1.ino  poweroid_timer_button_1x1_prop.h  poweroid_timer_button_1x1_state.h
